# occrp-document-classifier

./: .dockerignore  .env  Dockerfile  Pipfile  README.md  gpu.Dockerfile  init_data_structure.sh  portainer.sh  pyproject.toml  requirements.txt  requirements_docker.txt  run_gpu_model.sh  run_models_in_sequence.sh  setup.cfg  setup.py
docs/: CLI.md  Cheatsheet.md  Docker.md  FAQ.md  GPU.md  REPO_STRUCTURE.md
src/occrp_document_classifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/occrplib/: config.py  main.py
src/occrplib/document_classification/: document_classifier.py  primarypage_classifier.py
src/occrplib/model/: image_model.py
src/occrplib/model/architectures/: AlexNet_model.py  EfficientNetB0BW_model.py  EfficientNetB7BW_model.py  EfficientNetB7_model.py
src/occrplib/prediction/: predict.py  predict_probs.py
src/occrplib/preprocessing/: convert_to_img.py  import_data.py
src/occrplib/utils/: confusion_matrix.py  helper.py  logger.py
tests/: conftest.py
tests/src/: test_config.py
tests/src/document_classification/: test_document_classifier.py  test_firstpage_classifier.py
tests/src/feature_extraction/: test_feature_extractor.py
tests/src/model/: test_image_model.py
tests/src/prediction/: test_predict.py
tests/src/preprocessing/: test_convert_img.py  test_train_val_test_split.py
tests/test_data/: center.npy  stdev.npy  test_batch_mean.npy  test_batch_stdev.npy  test_mean.npy  test_stdev.npy  test_tiff.tif  train_df  train_prediction_dict.pkl  word1.doc
tests/utils/: test_confusion_matrix.py  test_gaussian.py
(+10 files in other folders)
