[project]
name = "occrp-document-classifier"
description = "Document Classifier for Aleph' OCCRP"
authors = [
    {name = "José Miguel Cordero", email = "josemcorderoc@gmail.com"},
    {name = "Theresa Henn", email = "theresahenn13@gmail.com"},
    {name = "Frederik H."},
    {name = "José Sánchez Gómez", email = "jose.sgomez94@gmail.com"},
]
readme = "README.md"
keywords = [
    "aleph",
    "deep learning",
    "document classification",
    "document classifier",
    "investigative journalism",
    "machine learning",
    "occrp",
]


[tool.black]
line-length = 125
